--- a/index.html
+++ b/index.html
@@ -1,1 +1,13 @@
-index.html
+<!DOCTYPE html>
+<html lang="en">
+<head>
+	<meta charset="UTF-8">
+	<title>Lista de Tareas</title>
+</head>
+<body>
+<h1>Crea tu Lista de Tareas</h1>
+<ul id='lista'>
+</ul>
+	
+</body>
+</html>
