agregamos un boton que guarde lo que ingresa el usuario al final de la lista

--- a/index.html
+++ b/index.html
@@ -8,6 +8,10 @@
 <h1>Crea tu Lista de Tareas</h1>
 <ul id='lista'>
 </ul>
+  <div id="nuevaInfo">
+    <input type="text" id="agregarli" placeholder="Agrega una tarea aquí.">
+    <button type="button" id="boton" onclick="agregarTarea()">Añadir Tarea</button>
+</div>
 	
 </body>
 </html>
