--- a/index.html
+++ b/index.html
@@ -5,13 +5,13 @@
 	<title>Lista de Tareas</title>
 </head>
 <body>
-<h1>Crea tu Lista de Tareas</h1>
-<ul id='lista'>
-</ul>
-  <div id="nuevaInfo">
-    <input type="text" id="agregarli" placeholder="Agrega una tarea aquí.">
-    <button type="button" id="boton" onclick="agregarTarea()">Añadir Tarea</button>
-</div>
-	
+	<h1>Crea tu Lista de Tareas</h1>
+	<ul id='lista'>
+	</ul>
+	<div id="nuevaInfo">
+		<input type="text" id="agregarli" placeholder="Agrega una tarea aquí.">
+		<button type="button" id="boton" onclick="agregarTarea()">Añadir Tarea</button>
+	</div>
+	<script src="assets/js/main.js"></script>
 </body>
 </html>
